--- a/manifest.yml
+++ b/manifest.yml
@@ -11,4 +11,4 @@ applications:
   command: bundle exec rake db:migrate && unicorn -p $PORT -c ./config/unicorn.rb
 - name: peoplefinder-worker-dev
   buildpack: ruby_buildpack
-  command: bundle exec rake jobs work
+  command: bundle exec rake jobs:work
