Restrict deletion of profiles to super admins
This changes the PersonPolicy to restrict the deletion of profiles from
the People Finder only to users with a super admin role.

This also changes the action links displayed above a profile so that
only users with the ability to delete a profile will see the button.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -180,6 +180,7 @@ Rails/ScopeArgs:
 
 RSpec/ScatteredSetup:
   Exclude:
+    - 'spec/controllers/people_controller_spec.rb'
     - 'spec/features/group_maintenance_spec.rb'
     - 'spec/features/management_spec.rb'
     - 'spec/features/person_maintenance_spec.rb'
