Move Rubocop exclusions out of the `todo` file
This moves the existing list of exclusions out of the once auto-generated
`robocop_todo.yml` file innto `rubocop.yml`, where we can more-easily
extend the list of exclusions in future.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -177,3 +177,10 @@ RSpec/InstanceVariable:
 
 Rails/ScopeArgs:
   Enabled: false
+
+RSpec/ScatteredSetup:
+  Exclude:
+    - 'spec/features/group_maintenance_spec.rb'
+    - 'spec/features/management_spec.rb'
+    - 'spec/features/person_maintenance_spec.rb'
+    - 'spec/features/suggestion_spec.rb'
