Update other specs for new group permissions
This updates other controller and feature specs so that actions which
involve creating or updating groups are performed in tests with a 
super user.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -185,4 +185,5 @@ RSpec/ScatteredSetup:
     - 'spec/features/management_spec.rb'
     - 'spec/features/person_edit_notifications_spec.rb'
     - 'spec/features/person_maintenance_spec.rb'
+    - 'spec/features/person_membership_spec.rb'
     - 'spec/features/suggestion_spec.rb'
