Move dev variables from .env to .env.example

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,9 @@ S3_BUCKET_NAME=
 PROFILE_API_TOKEN=
 
 WORKSPACE_URL=
+
+# minimum env vars required
+SUPPORT_EMAIL=support@example.com
+
+# allow read-only access from a specific IP address
+READONLY_IP_WHITELIST=
