--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,15 @@ references:
           POSTGRES_USER: postgres
           PGUSER: postgres
 
+      - image: docker.elastic.co/elasticsearch/elasticsearch:6.8.0
+        environment:
+          - cluster.name: es-test-cluster
+          - xpack.security.enabled: false
+          - transport.host: localhost
+          - network.host: 127.0.0.1
+          - http.port: 9200
+          - discovery.type: single-node
+
   install_bundler: &install_bundler
     run:
       name: Install bundler
