--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ references:
           POSTGRES_USER: postgres
           PGUSER: postgres
 
-      - image: circleci/elasticsearch
+      - image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
         environment:
           - cluster.name: es-test-cluster
           - xpack.security.enabled: false
