--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ references:
           POSTGRES_USER: postgres
           PGUSER: postgres
 
-      - image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
+      - image: quay.io/trackmaven/elasticsearch:1.7
         environment:
           - cluster.name: es-test-cluster
           - xpack.security.enabled: false
@@ -98,11 +98,6 @@ references:
 #                   --out test_results/rspec.xml \
 #                   --format progress \
 #                   $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
-  run_feature_tests: &run_feature_tests
-    run:
-      name: Run feature tests
-      command: |
-        bundle exec rspec features
 
   # deploy_to_dev: &deploy_to_dev
   #   run:
@@ -152,7 +147,6 @@ jobs:
       - *set_up_the_database
       - *rubocop
       - *run_unit_tests
-      - *run_feature_tests
 
 #  Workflows combine jobs to perform the actions
 
