--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
           ports:
             - containerPort: 3000
-          command: ["./config/docker/entrypoint-webapp.sh"]
+          command: ["./run.sh"]
           env:
             - name: ENV
               value: 'dev'
@@ -38,12 +38,17 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: SECRET_KEY_BASE
+            - name: SUPPORT_EMAIL
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: SUPPORT_EMAIL
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-rds-output
                   key: url
-            - name: CORRESPONDENCE_PLATFORM_DATABASE_PASSWORD
+            - name: DATABASE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-rds-output
@@ -64,8 +69,8 @@ spec:
                   name: peoplefinder-s3-output
                   key: secret_access_key
         - name: jobs
-          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/correspondence/peoplefinder-ecr:latest
-          command: ["./config/docker/entrypoint-background-jobs.sh"]
+          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
+          command: ["./run.sh"]
           env:
             - name: ENV
               value: 'dev'
@@ -78,26 +83,21 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: SECRET_KEY_BASE
+            - name: SUPPORT_EMAIL
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: SUPPORT_EMAIL
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-rds-output
                   key: url
-            - name: CORRESPONDENCE_PLATFORM_DATABASE_PASSWORD
+            - name: DATABASE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-rds-output
                   key: database_password
-            - name: REDIS_URL
-              valueFrom:
-                secretKeyRef:
-                  name: peoplefinder-elasticache-redis-output
-                  key: url
-            - name: REDIS_AUTH_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: peoplefinder-elasticache-redis-output
-                  key: auth_token
             - name: SETTINGS__CASE_UPLOADS_S3_BUCKET
               valueFrom:
                 secretKeyRef:
