--- a/config/kubernetes/development/ingress.yaml
+++ b/config/kubernetes/development/ingress.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
   tls:
     - hosts:
-        - development.peoplefinder.service.gov.uk
+        - peoplefinder-development.apps.live-1.cloud-platform.service.justice.gov.uk
       secretName: peoplefinder-certificate
   rules:
-    - host: development.peoplefinder.service.gov.uk
+    - host: peoplefinder-development.apps.live-1.cloud-platform.service.justice.gov.uk
       http:
         paths:
           - path: /
