--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -85,6 +85,17 @@ spec:
                   key: secret_access_key
           readinessProbe:
             httpGet:
+              path: /ping.json
+              port: 3000
+              httpHeaders:
+                - name: X-Forwarded-Proto
+                  value: https
+                - name: X-Forwarded-Ssl
+                  value: "on"
+              initialDelaySeconds: 20
+              periodSeconds: 60
+          livenessProbe:
+            httpGet:
               path: /healthcheck
               port: 3000
               httpHeaders:
@@ -92,6 +103,8 @@ spec:
                   value: https
                 - name: X-Forwarded-Ssl
                   value: "on"
+            initialDelaySeconds: 20
+            periodSeconds: 60
         - name: jobs
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
           ports:
