--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ references:
           POSTGRES_USER: postgres
           PGUSER: postgres
 
-      - image: quay.io/trackmaven/elasticsearch:1.7
+      - image: bitnami/elasticsearch:6.8.6-r1
         environment:
           - cluster.name: es-test-cluster
           - xpack.security.enabled: false
