--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -31,8 +31,12 @@ spec:
               value: 'production'
             - name: PROJECT
               value: 'peoplefinder'
+            - name: ACTION_MAILER_DEFAULT_URL
+              value: 'development.peoplefinder.service.gov.uk'
             - name: RAILS_SERVE_STATIC_FILES
               value: 'true'
+            - name: MOJ_PF_ES_URL
+              value: 'http://aws-es-proxy-service:9200'
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
@@ -85,14 +89,14 @@ spec:
                   key: secret_access_key
           readinessProbe:
             httpGet:
-              path: /ping.json
+              path: /healthcheck
               port: 3000
               httpHeaders:
                 - name: X-Forwarded-Proto
                   value: https
                 - name: X-Forwarded-Ssl
                   value: "on"
-              initialDelaySeconds: 20
+              initialDelaySeconds: 40
               periodSeconds: 60
           livenessProbe:
             httpGet:
@@ -103,7 +107,7 @@ spec:
                   value: https
                 - name: X-Forwarded-Ssl
                   value: "on"
-            initialDelaySeconds: 20
+            initialDelaySeconds: 40
             periodSeconds: 60
         - name: jobs
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
@@ -118,7 +122,7 @@ spec:
               value: 'production'
             - name: PROJECT
               value: 'peoplefinder-jobs'
-             - name: ACTION_MAILER_DEFAULT_URL
+            - name: ACTION_MAILER_DEFAULT_URL
               value: 'development.peoplefinder.service.gov.uk'
             - name: SECRET_KEY_BASE
               valueFrom:
