--- a/config/kubernetes/demo/deployment.yaml
+++ b/config/kubernetes/demo/deployment.yaml
@@ -72,21 +72,23 @@ spec:
                 secretKeyRef:
                   name: peoplefinder-rds-output
                   key: database_password
-            - name: SETTINGS__CASE_UPLOADS_S3_BUCKET
+            - name: S3_BUCKET_NAME
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: bucket_name
-            - name: AWS_ACCESS_KEY_ID
+            - name: S3_KEY
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: access_key_id
-            - name: AWS_SECRET_ACCESS_KEY
+            - name: S3_SECRET
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: secret_access_key
+            - name: S3_REGION
+              value: 'eu-west-2'
           readinessProbe:
             httpGet:
               path: /healthcheck
@@ -144,21 +146,23 @@ spec:
                 secretKeyRef:
                   name: peoplefinder-rds-output
                   key: database_password
-            - name: SETTINGS__CASE_UPLOADS_S3_BUCKET
+            - name: S3_BUCKET_NAME
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: bucket_name
-            - name: AWS_ACCESS_KEY_ID
+            - name: S3_KEY
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: access_key_id
-            - name: AWS_SECRET_ACCESS_KEY
+            - name: S3_SECRET
               valueFrom:
                 secretKeyRef:
                   name: peoplefinder-s3-output
                   key: secret_access_key
+            - name: S3_REGION
+              value: 'eu-west-2'
             - name: SENDGRID_USERNAME
               valueFrom:
                 secretKeyRef:
