--- a/config/kubernetes/production/deployment.yaml
+++ b/config/kubernetes/production/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           command: ["./run.sh"]
           env:
             - name: ENV
-              value: 'dev'
+              value: 'prod'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
@@ -119,7 +119,7 @@ spec:
           args: ["worker"]
           env:
             - name: ENV
-              value: 'dev'
+              value: 'prod'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
