--- a/config/kubernetes/demo/ingress.yaml
+++ b/config/kubernetes/demo/ingress.yaml
@@ -6,11 +6,10 @@ metadata:
 spec:
   tls:
     - hosts:
-        - peoplefinder-demo.apps.live-1.cloud-platform.service.justice.gov.uk
         - demo.peoplefinder.service.gov.uk
       secretName: peoplefinder-certificate
   rules:
-    - host: peoplefinder-demo.apps.live-1.cloud-platform.service.justice.gov.uk #demo.peoplefinder.service.gov.uk
+    - host: demo.peoplefinder.service.gov.uk
       http:
         paths:
           - path: /
