--- a/config/kubernetes/staging/deployment.yaml
+++ b/config/kubernetes/staging/deployment.yaml
@@ -32,7 +32,7 @@ spec:
             - name: PROJECT
               value: 'peoplefinder'
             - name: ACTION_MAILER_DEFAULT_URL
-              value: 'peoplefinder-staging.apps.live-1.cloud-platform.service.justice.gov.uk' #staging.peoplefinder.service.gov.uk'
+              value: 'staging.peoplefinder.service.gov.uk'
             - name: RAILS_SERVE_STATIC_FILES
               value: 'true'
             - name: MOJ_PF_ES_URL
@@ -125,7 +125,7 @@ spec:
             - name: PROJECT
               value: 'peoplefinder-jobs'
             - name: ACTION_MAILER_DEFAULT_URL
-              value: 'peoplefinder-staging.apps.live-1.cloud-platform.service.justice.gov.uk' #staging.peoplefinder.service.gov.uk'
+              value: 'staging.peoplefinder.service.gov.uk'
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
