--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -120,6 +120,8 @@ spec:
           env:
             - name: ENV
               value: 'dev'
+            - name: RACK_ENV
+              value: 'production'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
