--- a/config/kubernetes/production/deployment.yaml
+++ b/config/kubernetes/production/deployment.yaml
@@ -26,7 +26,9 @@ spec:
           command: ["./run.sh"]
           env:
             - name: ENV
-              value: 'prod'
+              value: 'production'
+            - name: RACK_ENV
+              value: 'production'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
@@ -119,7 +121,9 @@ spec:
           args: ["worker"]
           env:
             - name: ENV
-              value: 'prod'
+              value: 'production'
+            - name: RACK_ENV
+              value: 'production'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
