--- a/config/kubernetes/staging/deployment.yaml
+++ b/config/kubernetes/staging/deployment.yaml
@@ -26,7 +26,9 @@ spec:
           command: ["./run.sh"]
           env:
             - name: ENV
-              value: 'dev'
+              value: 'staging'
+            - name: RACK_ENV
+              value: 'production'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
@@ -119,7 +121,7 @@ spec:
           args: ["worker"]
           env:
             - name: ENV
-              value: 'dev'
+              value: 'demo'
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
