CT-2701 missed a few env env vars

--- a/config/kubernetes/demo/deployment.yaml
+++ b/config/kubernetes/demo/deployment.yaml
@@ -122,6 +122,8 @@ spec:
           env:
             - name: ENV
               value: 'demo'
+            - name: RACK_ENV
+              value: 'production'  
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
