CT-2711 updated the domains as of Feb 2020

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -1,11 +1,14 @@
 - cafcass.gsi.gov.uk
 - ccrc.x.gsi.gov.uk
+- cica.gov.uk
 - cica.gsi.gov.uk
 - cjs.gsi.gov.uk
 - crowncommercial.gov.uk
 - digital.justice.gov.uk
+- giaa.gov.uk
 - hmcourts-service.gsi.gov.uk
 - hmcts.gsi.gov.uk
+- hmiprisons.gov.uk
 - hmiprisons.gsi.gov.uk
 - hmiprobation.gsi.gov.uk
 - hmps.gsi.gov.uk
@@ -13,9 +16,13 @@
 - ips.gsi.gov.uk
 - jac.gsi.gov.uk
 - jaco.gsi.gov.uk
+- judicialappointments.gov.uk
+- judicialconduct.gov.uk
 - judiciary.gsi.gov.uk
+- judiciary.uk
 - justice.gov.uk
 - justice.gsi.gov.uk
+- lawcommission.gov.uk
 - lawcommission.gsi.gov.uk
 - legalaid.gsi.gov.uk
 - legalombudsman.org.uk
@@ -26,5 +33,6 @@
 - ppo.gsi.gov.uk
 - probation.gsi.gov.uk
 - publicguardian.gsi.gov.uk
+- sentencingcouncil.gov.uk
 - sentencingcouncil.gsi.gov.uk
 - yjb.gsi.gov.uk
