CT-2701 quick config for remaining envs Kubernetes (#614)
* CT-2701 quick config for remaining envs Kubernetes

* CT-2701 Fix S3 settings in deployment to correct keys

* CT-2701 update prod just for the fun of it

* CT-2701 tidy up URLs after removing additional hosts

* CT-2701 Remove live1 references

* CT-2701 forgot to save, demo url tidy up

* CT-2701 Add correct env env variables

* CT-2701 missed a few env env vars

* CT-2701 Missed another env env

--- a/config/kubernetes/demo/deployment.yaml
+++ b/config/kubernetes/demo/deployment.yaml
@@ -26,15 +26,15 @@ spec:
           command: ["./run.sh"]
           env:
             - name: ENV
-              value: 'dev'
+              value: 'demo'
             - name: RACK_ENV
-              value: 'production'  
+              value: 'production'            
             - name: RAILS_ENV
-              value: 'production'
+              value: 'production'  
             - name: PROJECT
               value: 'peoplefinder'
             - name: ACTION_MAILER_DEFAULT_URL
-              value: 'development.peoplefinder.service.gov.uk'
+              value: 'demo.peoplefinder.service.gov.uk'
             - name: RAILS_SERVE_STATIC_FILES
               value: 'true'
             - name: MOJ_PF_ES_URL
@@ -121,15 +121,15 @@ spec:
           args: ["worker"]
           env:
             - name: ENV
-              value: 'dev'
+              value: 'demo'
             - name: RACK_ENV
-              value: 'production'
+              value: 'production'  
             - name: RAILS_ENV
               value: 'production'
             - name: PROJECT
               value: 'peoplefinder-jobs'
             - name: ACTION_MAILER_DEFAULT_URL
-              value: 'development.peoplefinder.service.gov.uk'
+              value: 'demo.peoplefinder.service.gov.uk'
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
