--- a/config/kubernetes/staging/ingress.yaml
+++ b/config/kubernetes/staging/ingress.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: peoplefinder-staging
 spec:
   tls:
-    - hosts: staging.peoplefinder.service.gov.uk
+    - hosts: 
+      - staging.peoplefinder.service.gov.uk
       secretName: peoplefinder-certificate
   rules:
     - host: staging.peoplefinder.service.gov.uk
