--- a/config/kubernetes/staging/cron-person-update-reminder.yaml
+++ b/config/kubernetes/staging/cron-person-update-reminder.yaml
@@ -1,9 +1,9 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: person-notifier
+  name: person-update-reminder
 spec:
-  schedule: "0,5,10,15,20,25,30,35,40,45,50,55 * * * *"
+  schedule: "15 8 * * 1-5"
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
@@ -67,5 +67,5 @@ spec:
             command:
               - /bin/sh
               - "-c"
-              - "rails runner 'NotificationSender.new.send!'"
+              - "rails runner 'PersonUpdateNotifier.send_reminders'"
           restartPolicy: OnFailure
