CT-2702 Add env vars for admin ips

--- a/config/kubernetes/production/deployment.yaml
+++ b/config/kubernetes/production/deployment.yaml
@@ -44,6 +44,11 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: READONLY_IP_WHITELIST
+            - name: ADMIN_IP_RANGES
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: ADMIN_IP_RANGES                  
             - name: SENDGRID_USERNAME
               valueFrom:
                 secretKeyRef:
