--- a/config/kubernetes/production/env-configmap.yaml
+++ b/config/kubernetes/production/env-configmap.yaml
@@ -6,4 +6,5 @@ data:
   ENV: 'production'
   RACK_ENV: 'production'
   RAILS_ENV: 'production'
-  ACTION_MAILER_DEFAULT_URL: 'peoplefinder-production.apps.live-1.cloud-platform.service.justice.gov.uk' #'www.peoplefinder.service.gov.uk'
+  ACTION_MAILER_DEFAULT_URL: www.peoplefinder.service.gov.uk
+  
