Change route constraint to use remote_ip
In the Kubernetes cluster, `ip` returns the ip of the loadbalancer service, not the remote client. Need to use `remote_ip`

Also updated IP addresses for latest production and added ADMIN IP RANGE for all namespaces

--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: peoplefinder
 spec:
-  replicas: 2
+  replicas: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -44,6 +44,11 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: READONLY_IP_WHITELIST
+            - name: ADMIN_IP_RANGES
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: ADMIN_IP_RANGES
             - name: SENDGRID_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -81,9 +86,9 @@ spec:
                   key: secret_access_key
             - name: S3_REGION
               value: 'eu-west-2'
-          envFrom: 
+          envFrom:
             - configMapRef:
-                name: environment-variables                    
+                name: environment-variables
           readinessProbe:
             httpGet:
               path: /healthcheck
@@ -160,7 +165,7 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: SENDGRID_PASSWORD
-          envFrom: 
+          envFrom:
             - configMapRef:
-                name: environment-variables          
+                name: environment-variables
 
