--- a/config/kubernetes/production/env-configmap.yaml
+++ b/config/kubernetes/production/env-configmap.yaml
@@ -7,4 +7,5 @@ data:
   RACK_ENV: 'production'
   RAILS_ENV: 'production'
   ACTION_MAILER_DEFAULT_URL: 'peoplefinder.service.gov.uk'
+  GA_TRACKING_ID: UA-53656606-1
   
