--- a/config/kubernetes/development/env-configmap.yaml
+++ b/config/kubernetes/development/env-configmap.yaml
@@ -7,3 +7,5 @@ data:
   RACK_ENV: 'production'
   RAILS_ENV: 'production'
   ACTION_MAILER_DEFAULT_URL: 'development.peoplefinder.service.gov.uk'
+  GA_TRACKING_ID: 'UA-53656606-1'
+  
